# grootc

./: .gitignore  CMakeLists.txt  README.md  groot.g4  main.cpp  visitorimpl.cpp  visitorimpl.h
examples/: test.gt
parser/: groot.interp  grootBaseVisitor.cpp  grootBaseVisitor.h  grootLexer.cpp  grootLexer.h  grootLexer.interp  grootLexer.tokens  grootParser.cpp  grootParser.h  grootVisitor.cpp  grootVisitor.h
snippets/: CMakeLists.txt  fn.cpp  while.cpp
